# jira-tui

./: IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
src/jira_tui/: __init__.py  __main__.py  app.py  app.tcss  config.py  history.py  jira_client.py  models.py
tests/: test_app.py  test_config.py  test_history.py  test_jira_client.py  test_models.py
